--- a/index.html
+++ b/index.html
@@ -22,15 +22,10 @@
   </head>
 
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N2S6XJ4C"
-              height="0" width="0" style="display:none;visibility:hidden">
-      </iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
+  
 
     <h1>Hello World</h1>
     <p>This is a test page for Google Tag Manager.</p>
+    <p>Another Paragrapgh please disregard</p>
   </body>
 </html>
