--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <h1>Hello World</h1>
     <p>This is a test page for Google Tag Manager.</p>
     <p>Another Paragrapgh please disregard</p>
+    <p>to check</p>
   </body>
 </html>
